# Chess-Challenge

./: .gitignore
Chess-Challenge/: Chess-Challenge.csproj
Chess-Challenge/resources/: mate_in_4.txt
Chess-Challenge/src/API/: Board.cs  Move.cs
Chess-Challenge/src/Evil Bot/: EvilBot.cs
Chess-Challenge/src/Framework/Application/Core/: ChallengeController.cs  Settings.cs
Chess-Challenge/src/Framework/Application/Helpers/API Helpers/: APIMoveGen.cs
Chess-Challenge/src/My Bot/: MyBot.cs
Rust/: old_board.txt
Rust/barschbot/: Cargo.toml  book.txt  rust.txt  test.flow
Rust/barschbot/src/: Eval.md  attack_board.rs  auto_tuning.rs  barsch_bot.rs  bb_settings.rs  bit_board.rs  bitboard_helper.rs  blunders.md  board.rs  chess_move.rs  colored_piece_type.rs  compact_hashmap.rs  constants.rs  dataset.rs  delphin_bot.rs  dolphin_bot.rs  endgame_table.rs  evaluation.rs  game.rs  magic_masks.rs  main.rs  match_handler.rs  opening_book.rs  perceptron.rs  piece_list.rs  piece_type.rs  square.rs  uci_move.rs  visualizer.rs  zoberist_hash.rs
Rust/benchmarks/src/: main.rs
