[package]
name = "barschbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
atomic-counter = "1.0.1"
backtrace = "0.3.69"
neuroflow = "0.2.0"
num = "0.4.1"
num-derive = "0.4.1"
num-integer = "0.1.40"
num-traits = "0.2.17"
rand = "0.8.5"
rand_distr = "0.4.3"
