[package]
name = "barschbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
backtrace = "0.3.69"
find_folder = "0.3.0"
num = "0.4.1"
num-derive = "0.4.1"
num-integer = "0.1.40"
num-traits = "0.2.17"
piston = "0.54.0"
piston2d-graphics = "0.44.0"
piston2d-opengl_graphics = "0.83.0"
piston_window = "0.130.0"
pistoncore-glutin_window = "0.72.0"
rand = "0.8.5"
rand_distr = "0.4.3"
